@@ -66,7 +66,7 @@
 			"description" : "VoidUI_joining_mods_scale_desc",
 			"parent" : ["enable_joining", "joining_mods"],
 			"percentage" : true,
-			"default_value" : 0.9,
+			"default_value" : 1,
 			"max" : 2,
 			"min" : 0.65,
 			"step" : 2
